--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "util-api-cipher",
   "version": "0.0.1",
+  "private":true,
   "author": {
     "name": "Geir Gåsodden",
     "email": "geir.gasodden@pythonia.no",
